# newnew

./: .gitignore  README.md  RUN_COMMANDS.md  annotation_ready_merged.PREFIX.bak  fol_nothink.txt  fol_nothink1.txt  fol_nothink2.txt  pyproject.toml  quickstart.ps1  quickstart.sh  result.txt  run_pipeline.py  test_translator.py  translator_stub_eval.txt
Finetune/: .gitignore  QUICKSTART.md  README.md  aggregate_reannotation.py  build_corrected_test.py  expand_for_annotation.py  filter_logic_fields.py  generate_corrected_labels.py  merge_annotation_splits.py  prep_reannotation.py  reannotate.workflow.mjs  requirements.txt  robustness_sweep.py  setup.sh  train.sh  triage_nl_fol.py
Finetune/data/: annotation_ready_merged.json  annotation_ready_merged.labeled.json  annotation_template.json
Finetune/finetune/: load.py  prompt.py  train_lora.py  types.py
Finetune/tests/: test_annotation_template.py  test_full_solver_annotation.py  test_smoke.py
configs/: default.yaml
src/: explain.py  pipeline.py  vote.py
src/cli/: eval.py  explain_gold.py  inspect.py  run.py
src/data/: load.py  types.py
src/eval/: score.py
src/fallback/: cot.py
src/solver/: z3_runner.py
src/translator/: fol_converter.py  fol_repair.py  infer.py  llama_fol.py  parse.py  predicate_group.py  prompt.py  repair.py  schema_fol.py  train_lora.py
tests/: test_constant_canon.py  test_end_to_end_exec.py  test_fol_converter.py  test_fol_repair.py  test_grouping_guard.py  test_llama_fol.py  test_predicate_group.py  test_repair_and_robustness.py  test_schema_fol.py  test_solver.py
