[project]
name = "exact2026-logic"
version = "0.2.0"
description = "EXACT 2026 Track 1 — Neuro-symbolic logic QA pipeline (Llama-3.1-8B NL→FOL → Z3)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "z3-solver>=4.13",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# The single model path: fvossel/Llama-3.1-8B-Instruct-nl-to-fol (a LoRA adapter)
# loaded on the gated meta-llama/Llama-3.1-8B-Instruct base in 4-bit (NF4).
#
# NOTE: torch is NOT pinned here on purpose — install it FIRST from the CUDA
# wheel index that matches your GPU/driver (the quickstart does this), e.g.:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124
# Installing torch via the plain PyPI resolver pulls a CPU-only wheel on Windows.
gpu = [
    "transformers>=4.44",     # Llama-3.1 architecture support
    "peft>=0.12",             # applies the fvossel LoRA adapter
    "accelerate>=0.33",       # device_map placement / offload
    "bitsandbytes>=0.44",     # 4-bit NF4 quantization (Windows wheels in >=0.44)
    "huggingface_hub>=0.24",  # snapshot_download in the quickstart
    "safetensors>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
exact-eval = "cli.eval:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
